Add latex generated files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,28 @@ ENV/
 *.swp
 
 ion_trapping/ion_trapping.c
+
+# latex stuff
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
